--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "PORT=3000 nodemon ./bin/www",
+    "dev": "nodemon ./bin/www",
     "test": "mocha ./test.js "
   },
   "dependencies": {
